--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,3 +1,21 @@
-.card-body{
-
+*, *::before, *::after {
+    box-sizing: border-box;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+.btn-grid {
+    display: grid;
+    gap: 10px;
+    margin: 20px 0 35px 0;
+    /* border-color: cadetblue; */
+}
+
+.btn {
+    border: 1px solid;
+    background-color: rgb(231, 225, 214);
+}
+
+.btn:hover{
+    border-color: rgb(255, 255, 255);
+}
+
