a just-to-be-safe commit

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -19,3 +19,10 @@
     border-color: rgb(255, 255, 255);
 }
 
+.controls {
+    display:flex;
+    justify-content: right;
+    align-items: left;
+}
+
+
